--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -50,3 +50,31 @@
   padding: 0 10px 0 10px;
   margin: 10px;
 }
+.tabla {
+  width: 100%;
+  margin: 10px;
+  overflow-y: scroll;
+}
+
+.tabla td,
+.tabla th {
+  padding: 8px;
+  border: 1px solid rgb(182, 178, 178);
+}
+
+.tabla th {
+  background-color: hsl(138, 50%, 87%);
+  color: rgb(15, 15, 15);
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+}
+
+.tabla tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+.tabla tr:hover {
+  background-color: #ddd;
+  cursor: pointer;
+}
